# serde-crypt

./: .gitignore  Cargo.toml  README.md  lib.rs  main.rs
.github/workflows/: build.yaml
serde-crypt-macro/: Cargo.toml  lib.rs
src/: lib.rs  main.rs
tests/: web.rs
