[package]
name = "serde-crypt"
version = "0.1.0"
edition = "2021"
description = "a serializer/deserializer for end-to-end encrypted serde serialization and deserialization - wasm-ready"
license = "GPL-3.0-or-later"
repository = "https://github.com/D3PSI/serde-crypt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.80" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.89"
base64 = "0.21.0"
ring = { version = "0.16.20", features = ["wasm32_c"] }
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlParagraphElement',
    'Node',
    'Window',
    'Storage',
    'console',
    'Headers',
    'Request',
    'RequestCredentials',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
