# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "serde-crypt"
version = "0.1.4"
edition = "2021"
description = "The end-to-end encrypted serde::Serializer and serde::Deserializer - wasm-ready"
license = "GPL-3.0-or-later"
repository = "https://github.com/D3PSI/serde-crypt"
keywords = ["serde", "serialization", "crypto", "encryption"]
categories = ["cryptography"]

[lib]
path = "./lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.89" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.108"
base64 = "0.21.5"
ring = { version = "0.16.20", features = ["wasm32_c"] }
once_cell = "1.18.0"

[dependencies.web-sys]
version = "0.3.66"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlParagraphElement',
    'Node',
    'Window',
    'Storage',
    'console',
    'Headers',
    'Request',
    'RequestCredentials',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
